[tool.poetry]
name = "come"
version = "0.1.0"
description = ""
authors = ["github <github>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
streamlit = "^1.7.0"
opencv-python-headless = "^4.5.5"
numpy = "^1.22.3"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
